--- a/wcr-client/src/containers/homePage/style.css
+++ b/wcr-client/src/containers/homePage/style.css
@@ -1,3 +1,35 @@
 .vh-40 {
-	height: 40vh;
+  height: 40vh;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+.about-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 10rem;
+  background-color: rgb(247 247 247);
+
+  background-size: cover;
+}
+.banner-div {
+  width: 50vw;
+  height: 40vh;
+}
+.car-imge {
+  height: 30rem;
+}
+.about-image {
+  width: 90vw;
+  height: 555px;
+  object-fit: cover;
+  object-position: 50% 50%;
+}
+
+.about-image-container {
+  margin-top: 5rem;
+}
+.about-text {
+  margin-bottom: 7rem;
 }
