--- a/wcr-client/src/containers/homePage/style.css
+++ b/wcr-client/src/containers/homePage/style.css
@@ -6,11 +6,29 @@
   justify-content: center;
   margin-top: 3rem;
 }
+.banner-txt {
+  font-size: 5rem;
+}
+.intro-section {
+  width: 100vw;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-top: 2rem;
+}
+.text-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 88vw;
+}
 .about-section {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 10rem;
+  margin-top: 4rem;
   background-color: rgb(247 247 247);
 
   background-size: cover;
@@ -20,8 +38,8 @@
   height: 40vh;
 }
 .car-imge {
-  width: 490px;
-  height: 660px;
+  width: 900px;
+  height: 600px;
   object-fit: cover;
   object-position: 50% 50%;
 }
@@ -38,9 +56,19 @@
 .about-text {
   margin-bottom: 7rem;
 }
-.banner-txt {
-  font-size: 5rem;
+
+.contact-section {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 60vw;
 }
-.text-container {
-  margin-top: 11rem;
+
+.contact-section-container {
+  width: 100vw;
+  background-color: rgb(247 247 247);
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
