--- a/wcr-client/src/containers/homePage/style.css
+++ b/wcr-client/src/containers/homePage/style.css
@@ -4,31 +4,30 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  margin-top: 3rem;
 }
 .banner-txt {
   font-size: 5rem;
 }
 .intro-section {
   width: 100vw;
+  height: 850px;
 
   display: flex;
   flex-direction: row;
   justify-content: center;
-  margin-top: 2rem;
 }
 .text-container {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  width: 88vw;
+  width: 93vw;
 }
 .about-section {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 4rem;
+
   background-color: rgb(247 247 247);
 
   background-size: cover;
@@ -42,12 +41,14 @@
   height: 600px;
   object-fit: cover;
   object-position: 50% 50%;
+  border-radius: 5px;
 }
 .about-image {
-  width: 90vw;
+  width: 80vw;
   height: 555px;
   object-fit: cover;
   object-position: 50% 50%;
+  border-radius: 5px;
 }
 
 .about-image-container {
@@ -71,4 +72,20 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
+}
+
+/* aboutPage sections */
+
+.dashboard-image {
+  width: 90vw;
+  height: 555px;
+  object-fit: cover;
+  object-position: 50% 50%;
+}
+.aboutpage-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 1rem;
+  background-size: cover;
 }
