--- a/wcr-client/src/containers/homePage/style.css
+++ b/wcr-client/src/containers/homePage/style.css
@@ -49,13 +49,18 @@
   object-fit: cover;
   object-position: 50% 50%;
   border-radius: 5px;
+  position: relative;
+  text-align: center;
+  color: white;
 }
 
 .about-image-container {
   margin-top: 5rem;
 }
 .about-text {
-  margin-bottom: 7rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .contact-section {
@@ -81,11 +86,33 @@
   height: 555px;
   object-fit: cover;
   object-position: 50% 50%;
+  position: relative;
+  text-align: center;
+
+  border-radius: 7px;
 }
 .aboutpage-section {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 1rem;
+  margin-top: 4rem;
   background-size: cover;
+}
+
+.banner-background {
+  background-color: rgba(0, 0, 0, 0.6);
+
+  width: 70vw;
+}
+
+.bannr-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 4rem;
+  color: white;
+}
+.footer-text {
+  margin-top: 8rem;
 }
