--- a/wcr-client/src/components/vehiclesPage/style.css
+++ b/wcr-client/src/components/vehiclesPage/style.css
@@ -1,10 +1,14 @@
 .vehicle-image {
 	background-image: url('https://images.unsplash.com/photo-1548343361-02248be15911?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80');
 	width: 100%;
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-color: rgba(0, 0, 0, 0.6);
 }
 
-.mask-style {
-	background-color: rgba(0, 0, 0, 0.6);
+.vehicle-card {
+	height: 300px;
+	width: 400px;
 }
 
 #gradient-canvas {
