modal complete waiting for functionality

--- a/wcr-client/src/components/test-modal/index.css
+++ b/wcr-client/src/components/test-modal/index.css
@@ -39,6 +39,6 @@
 .duration-checklist {
 	margin-left: 5px;
 }
-.tester-image {
+/* .tester-image {
 	background-image: url('https://mdbcdn.b-cdn.net/img/new/slides/003.webp');
-}
+} */
