--- a/wcr-client/src/containers/homePage/style.css
+++ b/wcr-client/src/containers/homePage/style.css
@@ -20,8 +20,8 @@
 }
 .intro-section {
   width: 100vw;
-  height: 850px;
-
+  height: 100vh;
+  align-items: center;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -32,6 +32,7 @@
   justify-content: space-between;
   align-items: center;
   width: 93vw;
+  margin-bottom: 8rem;
 }
 .about-section {
   display: flex;
