--- a/wcr-client/src/containers/homePage/style.css
+++ b/wcr-client/src/containers/homePage/style.css
@@ -97,6 +97,8 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  margin-right: 3rem;
+  width: 100vw;
 }
 
 /* aboutPage sections */
@@ -198,6 +200,9 @@
   padding: 20px;
   text-align: center;
 }
+/* aos animations */
+
+@import 'aos/dist/aos.css';
 
 @media only screen and (max-width: 680px) {
   .j-card-container {
@@ -239,5 +244,12 @@
     border-radius: 8px;
     border-width: 2px;
     height: 100vh;
+  }
+  .contact-info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-top: 3rem;
+    text-align: center;
   }
 }
