--- a/wcr-client/src/containers/homePage/style.css
+++ b/wcr-client/src/containers/homePage/style.css
@@ -143,7 +143,14 @@
 }
 
 /* user journey section */
-
+.journey-container {
+  background: #232923;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 80vh;
+}
 .j-card-container {
   background: #232923;
   display: flex;
